--- a/CSS/Estilos2.css
+++ b/CSS/Estilos2.css
@@ -1,12 +1,12 @@
 .slider{
     overflow: hidden;
     margin: auto;
-    width: 100%;
+    width: 100%:
 }
 .slider ul{
     display: flex;
     padding: 0px;
-    width: 100%;
+    width: 500%;
     position: relative;
     margin: 0;
     left: 0;
@@ -15,9 +15,16 @@
 }
 .slider img{
     width: 100%;
-    height: 400px;
+    height: 200px;
     float: left;
 }
+
+@media (min-width: 768px) {
+    .slider img{
+        height: 400px;
+    }
+}
+
 .slider li{
     width: 100%;
     list-style: none;
